--- a/index.html
+++ b/index.html
@@ -359,7 +359,8 @@
 
       <!-- Gallery-->
       <section class="section novi-background section-98">
-        <div class="h1 text-primary font-weight-bold">تصاویر</div>
+        <div class="h1 text-primary
+        font-weight-bold">تصاویر</div>
         <div class="container">
           <div class="row d-flex justify-content-center" data-lightgallery="group" data-lg-thumbnail="false">
             <div class="col-12 col-md-6 py-3 col-lg-4">
